# gui_starter_template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .lgtm.yml  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  Dockerfile  LICENSE  README.md  README_building.md  README_dependencies.md  README_docker.md  README_troubleshooting.md  appveyor.yml  build_examples.sh  conanfile.py  conanfile.txt  main.cpp  meson.build  vcpkg.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/actions/setup_cache/: action.yml
.github/template/: README.md  removal-list  template_name  template_repository
.github/workflows/: auto-clang-format.yml  build_cmake.yml  ci.yml  cleanup-after-create.yml  code-format-check.yml  codeql-analysis.yml  template-janitor.yml  template-renamer.yml
catch_tests/: catch_main.cpp  catch_test_example.cpp
cmake/: CPM.cmake  Cache.cmake  ClangFormat.cmake  CodeAnalysis.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
configured_files/: .gitignore  CMakeLists.txt  config.hpp.in
fltk/: test_fltk.cpp
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
google_tests/: GTestExample.cpp  GTestExample.h  gtest_main.cpp
gtest/: CMakeLists.txt  main_gtests.cpp  tests.cpp
gtkmm/: hello_world.cpp  hello_world.hpp  main.cpp
imgui/: imconfig.h  imgui-SFML.h  test.cpp
imgui/lib/: imconfig.h  imgui-SFML.cpp
nana/: main.cpp
qt/: CMakeLists.txt  HelloQt.cpp  HelloQt.hpp  MainWindow.cpp  MainWindow.h  main.cpp  qtMain.cpp
src/: CMakeLists.txt  main.cpp
src/fltk/: CMakeLists.txt  README.md  test_fltk.cpp
src/gtkmm/: CMakeLists.txt  README.md  hello_world.cpp  hello_world.hpp  main.cpp
src/imgui/: CMakeLists.txt  imgui.ini  main.cpp  test.cpp
src/imgui-sfml/: README.md  test.cpp
src/nana/: CMakeLists.txt  main.cpp
src/qt/: CMakeLists.txt  HelloQt.cpp  HelloQt.hpp  qtMain.cpp
src/sdl/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  tests.cpp
